# eventstore-rs

./: Cargo.toml  codegen.rs
protos/es6/: persistent.proto  projections.proto  streams.proto  users.proto
src/: connection.rs  discovery.rs  es6.rs  internal.rs  lib.rs  types.rs
src/discovery/: cluster.rs  constant.rs
src/es6/: commands.rs  connection.rs  grpc.rs  mod.rs  types.rs
src/es6/grpc/: streams.rs  users.rs
src/internal/: commands.rs  connection.rs  discovery.rs  driver.rs  messaging.rs  operations.rs  registry.rs
src/internal/grpc/: persistentsubscriptions.rs  projections.rs  streams.rs
tests/: integration.rs
