[package]
name = "eventstore"
version = "0.6.0"
authors = ["Yorick Laupa <yo.eight@gmail.com>"]
edition = "2018"

# Uncomment if you want to update messages.rs code-gen.
# We disabled codegen.rs because it requires having `protoc` installed on your machine
# in order to build that library.
build = "codegen.rs"

license = "MIT"
description = "GetEventStore TCP client"
repository = "https://github.com/YoEight/eventstore-rs"
readme = "README.md"
keywords = ["database", "eventsourcing", "event", "eventstore", "ges"]
exclude = [
  ".gitignore",
  ".gitlab-ci.yml",
  ".travis.yml",
  ".github"
]

categories = ["database", "api-bindings"]

# cargo-features = ["rename-dependency"]

[features]
default = ["es6"] # ["es5-and-below"]
es6 = [
  "tonic",
  "mio",
  "futures_3",
  "tokio_2",
  "prost",
  "prost-derive",
  "prost-types",
  "security-framework",
  "http",
  "rustls",
  "webpki"
]

es5-and-below = [
  "tokio",
  "tokio-timer",
  "futures",
  "protobuf",
  "reqwest"
]

[dependencies]
tokio = { version = "0.1", optional = true }
tokio_2 = { package = "tokio", version = "^0.2", optional = true, features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
tokio-timer = { version = "0.2", optional = true }
futures = { version = "0.1", optional = true }
futures_3 = { package = "futures", version = "0.3", optional = true }
uuid = { version  = "0.7", features = [ "v4", "serde" ] }
bytes = "0.4"
protobuf = { version = "2.8", features = ["with-bytes"], optional = true }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
reqwest = { version = "0.9", optional = true }
vec1 = "1.4"
rand = "0.7"
tonic = { version = "0.1.0-beta.1", features = ["tls", "tls-roots"], optional = true }
mio = { version = "0.6.21", optional = true }
prost = { version = "0.5", optional = true }
prost-derive = { version = "0.5", optional = true }
prost-types = { version = "0.5", optional = true }
byteorder = "1.2"
security-framework = { version = "^0.3.2", optional = true }
http = { version = "0.2", optional = true }
rustls = { version = "^0.16", features = ["dangerous_configuration"], optional = true }
webpki = { version = "0.21.0", optional = true }

[build-dependencies]
# protoc-rust = "2.8"
tonic-build = "0.1.0-beta.1"

[[test]]
name = "integration"

[dev-dependencies]
env_logger = "0.6"
# tokio = { version = "^0.2", features = ["macros"] }
